# lifemastery

./: .gitignore  .prettierignore  .terraform.lock.hcl  Cargo.toml  README.md  main.tf  nx.json  package.json  project.json  tsconfig.base.json  variables.tf
.github/workflows/: ci.yml
.husky/: pre-commit
.storybook/: main.ts
apps/.storybook/mobile/: metro.config.js  tailwind.config.js
apps/.storybook/web/finance/: main.ts  postcss.config.js  preview.ts  project.json  tailwind.config.js
apps/.storybook/web/landing/: main.ts
apps/.storybook/web/shared/: main.ts
apps/clients/mobile/finance/: app.json  jest.config.ts  package.json  project.json
apps/clients/web/demo/: deploy.sh
apps/clients/web/finance/: .eslintrc.json  .terraform.tfstate.lock.info  Dockerfile  delete_cdn.sh  deploy.sh  main.tf  (+13 more)
apps/src-tauri/demo/: project.json
apps/src-tauri/finance/: Cargo.toml  project.json  tauri.conf.json
infra/artifact/: main.tf
infra/run/: main.tf  variables.tf
infra/workload_identity_federation/: main.tf
kubernetes/: nfs-server.yml  nfs-service.yml  pv-pvc.yml
libs/infra/bucket/: main.tf  output.tf  project.json
libs/infra/cdn/: main.tf  output.tf  project.json
libs/infra/certificate/: project.json
libs/infra/compute/: main.tf  project.json
libs/infra/run/: main.tf  variables.tf
libs/infra/workload_identity_federation/: main.tf  output.tf  variables.tf
libs/models/api/: project.json
tools/infra/run/: main.tf
tools/infra/workload_identity_federation/: variables.tf
tools/scripts/: certificates.sh  deploy.sh  workload_identity_provider.sh
(+66 files in other folders)
