[package]
name = "desktop-finance"
default-run = "desktop-finance"
description = "Finance desktop app"
version = "0.0.1"
rust-version = "1.59"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.4", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
